[gd_scene load_steps=9 format=2]

[ext_resource path="res://rsz_outer.png" type="Texture" id=1]
[ext_resource path="res://Control.gd" type="Script" id=2]
[ext_resource path="res://nekodex - circles [osu soundtrack].ogg" type="AudioStream" id=3]
[ext_resource path="res://Fifth-Grader.ttf" type="DynamicFontData" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 43.0743

[sub_resource type="DynamicFont" id=2]
size = 46
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxLine" id=3]
color = Color( 1, 1, 1, 1 )
thickness = 9

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 1, 1, 1, 0 )

[node name="Node2D" type="Node2D"]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer"]
margin_top = 510.0
margin_right = 370.0
margin_bottom = 510.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hit1" type="Area2D" parent="CanvasLayer/HBoxContainer"]

[node name="Hit1" type="TextureRect" parent="CanvasLayer/HBoxContainer/Hit1"]
margin_right = 84.0
margin_bottom = 84.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="CanvasLayer/HBoxContainer/Hit1"]
position = Vector2( 42.0448, 42.0448 )
shape = SubResource( 1 )

[node name="Hit2" type="Area2D" parent="CanvasLayer/HBoxContainer"]
position = Vector2( 90, 0 )

[node name="Hit1" type="TextureRect" parent="CanvasLayer/HBoxContainer/Hit2"]
margin_right = 84.0
margin_bottom = 84.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="CanvasLayer/HBoxContainer/Hit2"]
position = Vector2( 42.0448, 42.0448 )
shape = SubResource( 1 )

[node name="Hit3" type="Area2D" parent="CanvasLayer/HBoxContainer"]
position = Vector2( 180, 0 )

[node name="Hit1" type="TextureRect" parent="CanvasLayer/HBoxContainer/Hit3"]
margin_right = 84.0
margin_bottom = 84.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="CanvasLayer/HBoxContainer/Hit3"]
position = Vector2( 42.0448, 42.0448 )
shape = SubResource( 1 )

[node name="Hit4" type="Area2D" parent="CanvasLayer/HBoxContainer"]
position = Vector2( 270, 0 )

[node name="Hit1" type="TextureRect" parent="CanvasLayer/HBoxContainer/Hit4"]
margin_right = 84.0
margin_bottom = 84.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="CanvasLayer/HBoxContainer/Hit4"]
position = Vector2( 42.0448, 42.0448 )
shape = SubResource( 1 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="CanvasLayer/HBoxContainer"]
stream = ExtResource( 3 )

[node name="Label" type="Label" parent="CanvasLayer"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -284.0
margin_top = 2.0
margin_bottom = 49.0
grow_horizontal = 0
grow_vertical = 0
custom_fonts/font = SubResource( 2 )
align = 2
valign = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressBar" type="ProgressBar" parent="CanvasLayer"]
margin_right = 370.0
margin_bottom = 18.0
grow_horizontal = 0
custom_styles/fg = SubResource( 3 )
custom_styles/bg = SubResource( 4 )
custom_colors/font_color = Color( 1, 0.0509804, 0.0509804, 1 )
custom_colors/font_color_shadow = Color( 1, 0.219608, 0.219608, 1 )
value = 100.0
rounded = true
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}
